update gif reference and rick's name

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "JeanStkng Theme",
     "Developing the future",
     "JeanDevsito Theme",
-    "ChristhianEsk Theme",
+    "ChristianEsk Theme",
     "VSCode Dark Theme",
     "dark",
     "Theme",
